@@ -4,5 +4,5 @@
 	.p2align 1
 dsofn:
 	nop
-.Lfe:
+.Lfe1:
 	.size	dsofn,.Lfe1-dsofn
