@@ -10,7 +10,7 @@ DYNAMIC SYMBOL TABLE:
 #...
 0+1a0 g    DF \.text	0+8 dsofn3
 #...
-0+19c g    DF \.text	0+ dsofn
+0+19c g    DF \.text	0+2 dsofn
 #...
 Contents of section \.rela\.plt:
  015c 2c220000 0b060000 00000000           .*
