@@ -1,5 +1,5 @@
  .global _start
 _start:
 ; This must be compilable with --march=common_v10_v32.
- moveq 1,r11
+ moveq 1,$r11
 
